# Super-Mario

./: CMakeLists.txt
Assets/Levels/0/: Map.tmx  Tiles.tsx
Resources/Map/: Map.tmx  Tiles.tsx
Sources/: CMakeLists.txt
Sources/CollisionMgr/: CollisionMgr.cpp  CollisionMgr.h
Sources/Engine/: Engine.cpp  Engine.h  Main.cpp
Sources/Handlers/AnimationHandler/: AnimationHandler.cpp  AnimationHandler.h
Sources/LevelMgr/: LevelMgr.cpp  LevelMgr.h
Sources/Map/: Map.cpp  Map.h  MapMgr.cpp  MapMgr.h
Sources/Objects/: Object.cpp  Object.h
Sources/Objects/Mario/: Mario.cpp  Mario.h
Sources/Units/: Unit.cpp  Unit.h
Sources/Units/Mario/: Mario.cpp  Mario.h
Sources/Utils/: Global.hpp  Globals.h
